sync compositor: Fix multiprocess software clipping

Apply the clip before the matrix, so that matrix is not applied to it.
Not entirely sure why recent clipping changes did not expose this.

BUG=660119

Review-Url: https://codereview.chromium.org/2462903002
Cr-Commit-Position: refs/heads/master@{#428700}

Former-commit-id: 3a3725735f8f32c95b672537726037b9d0b9cf10